editing cards and adding text to an article

--- a/index.html
+++ b/index.html
@@ -57,7 +57,60 @@
         </nav>
 
         <!-- Заголовок -->
-        <h1 class="content__header">Как не утонуть в тревоге и управлять своими страхами</h1>
+        <h2 class="content__header">Как не утонуть в тревоге и управлять своими страхами</h2>
+
+        <p class="date__title">Автор: Лиза Файнтух · 21.08.2021</p>
+
+    <div class="water">
+        <img class="img__water" src="./image/water.jpg" alt="Вода">
+    </div>
+
+    <div class="mama__title">
+        <h3 class="title__text">Содержание</h3>
+        <ul class="title__list">
+            <li class="mama__list"><img src="./image/icon/Ellipse.png" alt="Кружок">   <u>Как понять, что отношения с мамой были дисфункциональнымии привели к травме?</u></li>
+            <li class="mama__list"><img src="./image/icon/Ellipse.png" alt="Кружок">   <u>Мама привет!</u>
+                <ul>
+                    <li class="mama__list pad"><u>Под под заголовок под заголовком</u></li>
+                    <li class="mama__list rad"><u>Под под под заголовок под заголовком</u></li>
+                    <li class="mama__list mad"><u>Под под под под заголовок под заголовком</u></li>
+                </ul>
+            </li>
+            <li class="mama__list"><img src="./image/icon/Ellipse.png" alt="Кружок">  <u>Ну вот опять заголовок который как «привет мама»</u></li>
+            <li class="mama__list"><img src="./image/icon/Ellipse.png" alt="Кружок">  <u>Как понять, что вы страдаете от материнской травмы?</u></li>
+        </ul>
+    </div>
+
+    <div class="title__info">
+        <h3 class="info__text">Заголовок h3</h3>
+        <br>
+        <p>Один из самых важных навыков, которые может дать работа с психотерапевтом - умение в разных ситуациях по-разному обходиться со своими эмоциями.  Снять этот процесс с автопилота и перевести его в поле сознания.
+            <br>
+            <br>
+        Давайте, к примеру, разберем тревогу. Можно разложить перед собой целую коллекцию доступных реакций и выбрать нужную:</p>
+    </div>
+    
+    <div class="citata">
+        <img src="./image/icon/background.png" alt="">
+    </div>
+
+    <div class="anxiety">
+        <h3 class="info__text">Что еще можно делать с тревогой?</h3>
+        <ul>
+            <li class="mama__list"><img src="./image/icon/Ellipse.png" alt="Кружок"> Управлять ей через что-то внешнее: включать музыку, которая создает другое настроение, сесть за работу с цифрами, которая быстренько активизирует другие участки мозга, читать блоги, которые вас успокаивают и отвлекают.</li>
+            <li class="mama__list"><img src="./image/icon/Ellipse.png" alt="Кружок">  А еще порой можно разрешить себе тревогу заесть чем-то вкусным. Это, конечно, не самая здоровая стратегия, но в ряде ситуаций можно считать ее вполне рабочей. Особенно, когда внутренний ресурс на нуле, а поддерживающее окружение не в доступе.</li>
+        </ul>
+    </div>
+
+    <div class="step">
+        <img class="img__step" src="./image/step.jpg" alt="Шаг">
+        <br>
+        <p class="step__text">Онтогенез речи отражает групповой эриксоновский гипноз. </p>
+    </div>
+
+    <div class="tit__text">
+        <p>Чем шире доступный вам репертуар реакций и чем более осознанно вы можете выбирать из него то, что лучше всего подойдет в каждой конкретной ситуации, тем больше будет ваша устойчивость к стрессу, депрессии, неопределенности, да и к жизни в целом.</p>
+    </div>
   </article>
 
   <aside class="sidebar">
@@ -69,24 +122,39 @@
     </section>
 
     <section class="card profile">
-      <img class="avatar" src="./image/icon/Liliya.png" alt="Лилия">
-      <h3>Лилия</h3>
-      <p class="role">Психолог</p>
-      <ul class="bullets">
-        <li>Опыт 8 лет</li>
-        <li>Тревога и панические атаки</li>
-      </ul>
+        <div class="content__cards">
+            <img class="avatar" src="./image/icon/Liliya.png" alt="Лилия">
+                <h3>Лилия</h3>
+                <p class="role">Психолог</p>
+            <ul class="bullets">
+                <li>Опыт 6 лет</li>
+                <li><img class="ellipse" src="./image/icon/EllipseGr.png" alt="">43 года</li>
+            </ul>
+                <h4 class="card__title">С чем работает психолог</h4>
+            <ul class="column__inf">
+                <li>Тревога, тревожности</li>
+                <li>Подавленность</li>
+                <li>Тревога и панические атаки</li>
+            </ul>
+        </div>
       <a class="btn__sidebar" href="#">Подробнее</a>
     </section>
 
-    <a class="banner" href="#"><img src="./image/icon/present.png" alt="Дарите заботу"><h3>Дарите заботу</h3></a>
-
-    <section class="card price">
-      <h3>8 видео-сессий</h3>
-        <p class="price-val">18 500 ₽</p>
-                <a class="btn__sidebar" href="#">Купить</a>
+    <a class="banner" href="#"><img src="./image/icon/present.png" alt="Дарите заботу"></a>
+        <section class="card price">
+            <div class="present">
+                <img src="./image/icon/presents-two.png" alt="Подарки">
+            </div>
+            <div class="present__content">
+                <h3 class="blue">8 Видео сессий</h3>
+                    <p>Проработать небольшие проблемы и продвинуться в решении сложных запросов</p>
+                        <h3>18 500 ₽</h3>
+                <a class="btn__pay" href="#">Купить</a>
+            </div>
             </section>
         </aside>
+
+        
     </main>
 </body>
 </html>  
